add dnat for provisiong interface

--- a/prepare-hypervisor.yaml
+++ b/prepare-hypervisor.yaml
@@ -602,11 +602,14 @@
     iptables:
       table: nat
       chain: PREROUTING
-      in_interface: "{{ ansible_default_ipv4.interface }}"
+      in_interface: "{{ item }}"
       protocol: tcp
       to_destination: "{{ vip.apps }}:443"
       destination_port: 443
       jump: DNAT
+    with_items:
+      - "{{ ansible_default_ipv4.interface }}"
+      - "{{ bridge_prov }}"
     when:
       - kvmhost.enable_portfw|bool
       - kvmhost.baremetal_bridge_isolated|bool or ( redfish.enable|bool and redfish.enable_nat|bool )
@@ -615,11 +618,14 @@
     iptables:
       table: nat
       chain: PREROUTING
-      in_interface: "{{ ansible_default_ipv4.interface }}"
+      in_interface: "{{ item }}"
       protocol: tcp
       to_destination: "{{ vip.api }}:6443"
       destination_port: 6443
       jump: DNAT
+    with_items:
+      - "{{ ansible_default_ipv4.interface }}"
+      - "{{ bridge_prov }}"
     when:
       - kvmhost.enable_portfw|bool
       - kvmhost.baremetal_bridge_isolated|bool or ( redfish.enable|bool and redfish.enable_nat|bool )
