--- a/variables.yaml
+++ b/variables.yaml
@@ -2,6 +2,7 @@ bridge_prov: prov
 bridge_bm: bm
 libguestfs_path: /usr/share/guestfs/appliance/
 dns_ip_utility: 1.1.1.1
+three_node_cluster: True
 redfish:
   enable: True
   config_file: /etc/sushy-emulator/sushy-emulator.conf
@@ -48,9 +49,10 @@ bastion:
   post_memory: 4096
   post_scaledown: True
 master:
-  cpu: 4
-  memory: 16384
+  cpu: 8
+  memory: 49152
   disk: 150G
+  osd_disk: 500G
 worker:
   cpu: 8
   memory: 32768
@@ -78,8 +80,8 @@ enable_letsencrypt: False
 # used on cleanup
 image_dir: /var/lib/libvirt/images
 image_dir_bastion: /var/lib/libvirt/imagesssd
-image: rhel-8.6-x86_64-kvm.qcow2
-image_location: /root/images/rhel-8.6-x86_64-kvm.qcow2
+image: rhel-9.4-x86_64-kvm.qcow2
+image_location: /root/images/rhel-9.4-x86_64-kvm.qcow2
 pull_secret_file: pull-secret.txt
 supported_os: rhel8
-ocpversion: stable-4.11
+ocpversion: stable-4.16
