--- a/create-masters.yaml
+++ b/create-masters.yaml
@@ -31,26 +31,60 @@
     run_once: True
     with_items: "{{ master_nodes }}"
 
+  - name: Create one OSD disk
+    shell: |
+      qemu-img create -f qcow2 -o preallocation=metadata {{ item.hypervisor_image_dir }}/{{ item.name }}-osd-1.qcow2 {{ master.osd_disk }}
+    delegate_to: "{{ item.hypervisor_name }}"
+    run_once: True
+    when:
+      - item.is_odf == "true"
+      - item.state == "present"
+    with_items: "{{ master_nodes }}"
+
   - name: Defining master VMs - virtualbmc
     shell: |
-      virt-install --ram {{ master.memory }} --vcpus {{ master.cpu }} --os-variant rhel8.5 --disk path={{ item.hypervisor_image_dir }}/{{ item.name }}.qcow2,device=disk,bus=virtio,format=qcow2 --noautoconsole --vnc --network bridge:{{ bridge_prov }},mac={{ item.provisioning_mac }} --network bridge:{{ bridge_bm }},mac={{ item.baremetal_mac }} --name {{ item.name }} --cpu host-passthrough --dry-run --print-xml > /tmp/{{ item.name }}.xml
+      virt-install --ram {{ master.memory }} --vcpus {{ master.cpu }} --os-variant rhel9.4 --disk path={{ item.hypervisor_image_dir }}/{{ item.name }}.qcow2,device=disk,bus=virtio,format=qcow2 --noautoconsole --vnc --network bridge:{{ bridge_prov }},mac={{ item.provisioning_mac }} --network bridge:{{ bridge_bm }},mac={{ item.baremetal_mac }} --name {{ item.name }} --cpu host-passthrough --dry-run --print-xml > /tmp/{{ item.name }}.xml
       virsh define /tmp/{{ item.name }}.xml
     delegate_to: "{{ item.hypervisor_name }}"
     run_once: True
     with_items: "{{ master_nodes }}"
     when:
       - not redfish.enable|bool
+      - not item.is_odf == "true"
 
   - name: Defining master VMs - redfish
     shell: |
-      virt-install --ram {{ master.memory }} --vcpus {{ master.cpu }} --os-variant rhel8.5 --disk path={{ item.hypervisor_image_dir }}/{{ item.name }}.qcow2,device=disk,bus=virtio,format=qcow2 --noautoconsole --vnc --network bridge:{{ bridge_bm }},mac={{ item.baremetal_mac }} --name {{ item.name }} --cpu host-passthrough --dry-run --print-xml > /tmp/{{ item.name }}.xml
+      virt-install --ram {{ master.memory }} --vcpus {{ master.cpu }} --os-variant rhel9.4 --disk path={{ item.hypervisor_image_dir }}/{{ item.name }}.qcow2,device=disk,bus=virtio,format=qcow2 --noautoconsole --vnc --network bridge:{{ bridge_bm }},mac={{ item.baremetal_mac }} --name {{ item.name }} --cpu host-passthrough --dry-run --print-xml > /tmp/{{ item.name }}.xml
       virsh define /tmp/{{ item.name }}.xml
     delegate_to: "{{ item.hypervisor_name }}"
     run_once: True
     with_items: "{{ master_nodes }}"
     when:
       - redfish.enable|bool
+      - not item.is_odf == "true"
   
+  - name: ODF - Defining master VMs - virtualbmc
+    shell: |
+      virt-install --ram {{ master.memory }} --vcpus {{ master.cpu }} --os-variant rhel9.4 --disk path={{ item.hypervisor_image_dir }}/{{ item.name }}.qcow2,device=disk,bus=virtio,format=qcow2 --disk path={{ item.hypervisor_image_dir }}/{{ item.name }}-osd-1.qcow2,device=disk,bus=virtio,format=qcow2 --noautoconsole --vnc --network bridge:{{ bridge_prov }},mac={{ item.provisioning_mac }} --network bridge:{{ bridge_bm }},mac={{ item.baremetal_mac }} --name {{ item.name }} --cpu host-passthrough --dry-run --print-xml > /tmp/{{ item.name }}.xml
+      virsh define /tmp/{{ item.name }}.xml
+    delegate_to: "{{ item.hypervisor_name }}"
+    run_once: True
+    with_items: "{{ master_nodes }}"
+    when:
+      - not redfish.enable|bool
+      - item.is_odf == "true"
+
+  - name: ODF - Defining master VMs - redfish
+    shell: |
+      virt-install --ram {{ master.memory }} --vcpus {{ master.cpu }} --os-variant rhel9.4 --disk path={{ item.hypervisor_image_dir }}/{{ item.name }}.qcow2,device=disk,bus=virtio,format=qcow2 --disk path={{ item.hypervisor_image_dir }}/{{ item.name }}-osd-1.qcow2,device=disk,bus=virtio,format=qcow2 --noautoconsole --vnc --network bridge:{{ bridge_bm }},mac={{ item.baremetal_mac }} --name {{ item.name }} --cpu host-passthrough --dry-run --print-xml > /tmp/{{ item.name }}.xml
+      virsh define /tmp/{{ item.name }}.xml
+    delegate_to: "{{ item.hypervisor_name }}"
+    run_once: True
+    with_items: "{{ master_nodes }}"
+    when:
+      - redfish.enable|bool
+      - item.is_odf == "true"
+
   # TODO: check ip address available in the hypervisor
   - name: Create virtualbmc interface
     shell: |
