--- a/p0310_prepare-utility.yaml
+++ b/p0310_prepare-utility.yaml
@@ -173,25 +173,41 @@
     run_once: True
     with_items: "{{ utility_nodes }}"
 
-  - name: Write ssh/config file
+  - name: Write ssh/config file - no localhost
     blockinfile:
       path: ~/.ssh/config
       backup: True
       state: present
       block: |
         Host {{ item.name }}.{{ domain }}
-          IdentityFile ansible-ssh/id_rsa
+          IdentityFile ~/ansible-ssh/id_rsa
           UserKnownHostsFile /dev/null
           StrictHostKeyChecking no
     delegate_to: "{{ item.hypervisor_name }}"
     run_once: True
     with_items: "{{ utility_nodes }}"
+    when: item.hypervisor_name != "localhost"
+
+  - name: Write ssh/config file - localhost
+    blockinfile:
+      path: ~/.ssh/config
+      backup: True
+      state: present
+      block: |
+        Host {{ item.name }}.{{ domain }}
+          IdentityFile ~/ansible-ssh/id_rsa
+          UserKnownHostsFile /dev/null
+          StrictHostKeyChecking no
+    delegate_to: "{{ item.hypervisor_name }}"
+    run_once: True
+    with_items: "{{ utility_nodes }}"
+    when: item.hypervisor_name == "localhost"
 
   - name: Add utility group-host - no localhost
     add_host:
       name: "{{ item.name }}.{{ domain }}"
       ansible_ssh_user: root
-      ansible_ssh_private_key_file: ansible-ssh/id_rsa
+      ansible_ssh_private_key_file: files/.ssh/id_rsa
       ansible_ssh_common_args: '-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ProxyCommand="ssh -W %h:%p -q {{ item.hypervisor_user }}@{{ item.hypervisor_name }}"'
       groups:
         - utility
@@ -214,7 +230,7 @@
       dest: hosts-utility-root
       content: |
         [utility]
-        {{ item.name }}.{{ domain }} ansible_ssh_user=root ansible_ssh_private_key_file=ansible-ssh/id_rsa ansible_ssh_common_args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ProxyCommand="ssh -W %h:%p -q {{ item.hypervisor_user }}@{{ item.hypervisor_name }}"'
+        {{ item.name }}.{{ domain }} ansible_ssh_user=root ansible_ssh_private_key_file=files/.ssh/id_rsa ansible_ssh_common_args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ProxyCommand="ssh -W %h:%p -q {{ item.hypervisor_user }}@{{ item.hypervisor_name }}"'
     with_items: "{{ utility_nodes }}"
     when: item.hypervisor_name != "localhost"
 
@@ -244,7 +260,6 @@
         {{ item.name }}.{{ domain }} ansible_ssh_user=kni ansible_ssh_pass={{ secure_password }} ansible_ssh_common_args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null '
     with_items: "{{ utility_nodes }}"
     when: item.hypervisor_name == "localhost"
-
 
 - name:  Prepare Utility Node
   hosts: utility
